--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </video>
         
         <!-- Logo Image Positioned at the Top with a 5vh Gap -->
-        <img src="Group 1.png" alt="MACHXVISUALS Logo" class="logo-image">
+        <img src="https://www.dropbox.com/scl/fi/24qzdrqrz2gqcwnwv7k8r/Group-1.png?rlkey=34ww505ftf0na2lvwwku3msan&st=dr1edgl5&raw=1" alt="MACHXVISUALS Logo" class="logo-image">
 
         <!-- Centered Navigation Text -->
         <div class="nav">
