--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Landing</title>
+    <title>MachXVisuals</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&family=Libre+Caslon+Display&display=swap');
 
@@ -123,7 +123,7 @@
         
         <!-- Logo Image at the Top -->
         <div class="logo-wrapper">
-            <img src="Group 1.png" alt="MACHXVISUALS Logo" class="logo-img">
+            <img src="https://www.dropbox.com/scl/fi/24qzdrqrz2gqcwnwv7k8r/Group-1.png?rlkey=34ww505ftf0na2lvwwku3msan&st=hyo25q8y&raw=1" alt="MACHXVISUALS Logo" class="logo-img">
         </div>
 
         <!-- Centered Navigation Text -->
