--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             justify-content: space-evenly;
             align-items: center;
             width: 80%;
+            z-index: 1;
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
@@ -88,51 +89,94 @@
             font-size: 30px;
         }
 
-        /* Media Queries for Responsiveness */
-        @media (max-width: 1200px) {
-            .nav a {
-                font-size: 50px;
-            }
+        /* Language Button Styles */
+        .language-button {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            cursor: pointer;
+            z-index: 2;
         }
 
-        @media (max-width: 768px) {
-            .nav a {
-                font-size: 30px;
-            }
-            .nav {
-                flex-direction: column;
-                gap: 20px;
-            }
+        .dropdown {
+            position: absolute;
+            top: 40px;
+            right: 0;
+            background: white;
+            color: black;
+            padding: 5px 10px;
+            border-radius: 5px;
+            display: none;
+            z-index: 3;
         }
 
-        @media (max-width: 480px) {
-            .nav a {
-                font-size: 20px;
-            }
-            .logo-img {
-                max-width: 90%;
-            }
+        .dropdown.show {
+            display: block;
+        }
+
+        .dropdown a {
+            display: block;
+            padding: 5px 0;
+            color: black;
+            text-decoration: none;
+        }
+
+        .dropdown a:hover {
+            background-color: #ddd;
         }
     </style>
+    <script>
+        function toggleDropdown() {
+            const dropdown = document.getElementById('dropdown');
+            dropdown.classList.toggle('show');
+        }
+
+        function setLanguage(lang) {
+            const elements = document.querySelectorAll('[data-lang]');
+            elements.forEach(el => {
+                el.style.display = el.getAttribute('data-lang') === lang ? 'block' : 'none';
+            });
+            document.documentElement.lang = lang;
+            const dropdown = document.getElementById('dropdown');
+            dropdown.classList.remove('show');
+        }
+
+        window.onload = () => {
+            setLanguage('en');
+        };
+    </script>
 </head>
 <body>
+
     <div class="custom-container">
         <video autoplay muted loop>
-            <source src="https://www.dropbox.com/scl/fi/5ea3s319yuq3m49ahxoim/video.mp4?rlkey=rxmuwrxng0xm58hbqfhpq8qfn&st=bb5ojk5w&raw=1" type="video/mp4">
+            <source src="https://www.dropbox.com/scl/fi/5ea3s319yuq3m49ahxoim/video.mp4?rlkey=rxmuwrxng0xm58hbqfhpq8qfn&st=bb5ojk5y&raw=1" type="video/mp4">
         </video>
-        
-        <!-- Logo Image at the Top -->
+
         <div class="logo-wrapper">
             <img src="https://www.dropbox.com/scl/fi/24qzdrqrz2gqcwnwv7k8r/Group-1.png?rlkey=34ww505ftf0na2lvwwku3msan&st=hyo25q8y&raw=1" alt="MACHXVISUALS Logo" class="logo-img">
         </div>
 
-        <!-- Centered Navigation Text -->
+        <div class="language-button" onclick="toggleDropdown()">
+            <img src="world.png" alt="Language" style="width: 30px; height: 30px;">
+            <div id="dropdown" class="dropdown">
+                <a href="#" onclick="setLanguage('en')">English</a>
+                <a href="#" onclick="setLanguage('mn')">Mongolian</a>
+            </div>
+        </div>
+
         <div class="nav">
-            <a href="portfolio.html">Portfolio</a>
-            <a href="contact.html">Contact</a>
-            <a href="about.html">About</a>
-            <span>Since 2022</span>
+            <a href="portfolio.html" data-lang="en">Portfolio</a>
+            <a href="contact.html" data-lang="en">Contact</a>
+            <a href="about.html" data-lang="en">About</a>
+            <span data-lang="en">Since 2022</span>
+
+            <a href="portfolio.html" data-lang="mn">Портфолио</a>
+            <a href="contact.html" data-lang="mn">Холбоо барих</a>
+            <a href="about.html" data-lang="mn">Бидний тухай</a>
+            <span data-lang="mn">2022 оноос хойш</span>
         </div>
     </div>
+
 </body>
 </html>
