--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
         @media (max-width: 768px) {
             .nav a {
-                font-size: 30px;
+                font-size: 60px;
             }
             .nav {
                 flex-direction: column;
@@ -143,11 +143,22 @@
 
         @media (max-width: 480px) {
             .nav a {
-                font-size: 20px;
+                font-size: 60px;
             }
             .logo-img {
                 max-width: 90%;
             }
+        }
+                /* Background Video Styling */
+                .background-video {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: -1;
+            pointer-events: none;
         }
     </style>
     <script>
@@ -175,7 +186,7 @@
 <body>
 
     <div class="custom-container">
-        <video autoplay muted loop>
+        <video autoplay muted loop class="background-video">
             <source src="video (1).mp4" type="video/mp4">
         </video>
 
