--- a/index.html
+++ b/index.html
@@ -124,8 +124,9 @@
         .dropdown a:hover {
             background-color: #ddd;
         }
-         /* Media Queries for Responsiveness */
-         @media (max-width: 1200px) {
+ 
+        /* Media Queries for Responsiveness */
+        @media (max-width: 1200px) {
             .nav a {
                 font-size: 50px;
             }
@@ -139,6 +140,9 @@
                 flex-direction: column;
                 gap: 20px;
             }
+            .nav a[data-lang='mn'], .nav span[data-lang='mn'] {
+                font-size: 40px;
+            }
         }
 
         @media (max-width: 480px) {
@@ -149,17 +153,7 @@
                 max-width: 90%;
             }
         }
-                /* Background Video Styling */
-                .background-video {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            z-index: -1;
-            pointer-events: none;
-        }
+
     </style>
     <script>
         function toggleDropdown() {
@@ -207,11 +201,11 @@
             <a href="contact.html" data-lang="en">Contact</a>
             <a href="about.html" data-lang="en">About</a>
             <span data-lang="en">Since 2022</span>
-
+            
             <a href="portfolio.html" data-lang="mn">Портфолио</a>
             <a href="contact.html" data-lang="mn">Холбоо барих</a>
             <a href="about.html" data-lang="mn">Бидний тухай</a>
-            <span data-lang="mn">2022 оноос хойш</span>
+            <span data-lang="mn">2022 оноос</span>
         </div>
     </div>
 
