--- a/Contact.html
+++ b/Contact.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Us</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    
+<body>  
+    <header>
+        <!-- Logo Text -->
+        <div class="logo" onclick="window.location.href='index.html'">
+            MACHXVISUALS
+        </div>
+        
+        <!-- Navigation Links -->
+        <nav>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+
 </body>
 </html>
