--- a/Portfoio.html
+++ b/Portfoio.html
@@ -21,13 +21,24 @@
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
-
-
-
-
-
-
-
+        <!-- Body Section -->
+        <main class="portfolio-container">
+            <div class="portfolio-grid">
+                <a href="jbgn" class="portfolio-box" id="featured">
+                    <div class="overlay"></div> <!-- Dark overlay -->
+                    <span class="portfolio-text">Featured</span>
+                </a>
+                <a href="rggr" class="portfolio-box" id="films">
+                    <div class="overlay"></div>
+                    <span class="portfolio-text">Films</span>
+                </a>
+                <a href="grgr" class="portfolio-box" id="stills">
+                    <div class="overlay"></div>
+                    <span class="portfolio-text">Stills</span>
+                </a>
+            </div>
+        </main>        
+        
         <!-- Footer Section -->
         <footer>
             <div class="footer-left">
