--- a/index.html
+++ b/index.html
@@ -181,15 +181,15 @@
 
     <div class="custom-container">
         <video autoplay muted loop class="background-video">
-            <source src="video (1).mp4" type="video/mp4">
+            <source src="./Assets/video (1).mp4 " type="video/mp4">
         </video>
 
         <div class="logo-wrapper">
-            <img src="Group 1.png" alt="MACHXVISUALS Logo" class="logo-img">
+            <img src="./Assets/Group 1.png" alt="MACHXVISUALS Logo" class="logo-img">
         </div>
 
         <div class="language-button" onclick="toggleDropdown()">
-            <img src="world.png" alt="Language" style="width: 30px; height: 30px;">
+            <img src="./Assets/world.png" alt="Language" style="width: 30px; height: 30px;">
             <div id="dropdown" class="dropdown">
                 <a href="#" onclick="setLanguage('en')">English</a>
                 <a href="#" onclick="setLanguage('mn')">Mongolian</a>
@@ -197,7 +197,7 @@
         </div>
 
         <div class="nav">
-            <a href="portfolio.html" data-lang="en">Portfolio</a>
+            <a href="Portfolio.html" data-lang="en">Portfolio</a>
             <a href="contact.html" data-lang="en">Contact</a>
             <a href="about.html" data-lang="en">About</a>
             <span data-lang="en">Since 2022</span>
