--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         </div>
 
         <div class="nav">
-            <a href="Portfolio.html" data-lang="en">Portfolio</a>
+            <a href="portfolio.html" data-lang="en">Portfolio</a>
             <a href="contact.html" data-lang="en">Contact</a>
             <a href="about.html" data-lang="en">About</a>
             <span data-lang="en">Since 2022</span>
