--- a/films.html
+++ b/films.html
@@ -23,9 +23,13 @@
             </nav>
         </header>
         <div class="advertisement-header">
-            <h1>ADVERTISEMENT CAMPAIGNS</h1>
+            <h1>FILMING CAMPAIGNS</h1>
             <div class="underline"></div>
         </div>
+        <!-- Back Button using an Image -->
+        <a href="portfolio.html" class="back-btn">
+            <img src="./Assets/back.png" alt="Back to Portfolio">
+        </a>
         <!-- Body Section -->
   
         <div class="video-gallery" id="videoContainer"></div>
@@ -33,10 +37,7 @@
         <!-- Footer Section -->
         <footer>
             <div class="footer-left">
-                <p>Contact No</p>
-                <p>+976 95258434</p>
-                <p>+976 99784282</p>
-                <p>Contact Email - support@machxvisuals.com</p>
+                <p>Follow us through these socials</p>
                 <div class="social-links">
                     <a href="https://twitter.com" target="_blank">Twitter</a>
                     <a href="https://instagram.com" target="_blank">- Instagram</a>
