--- a/index.html
+++ b/index.html
@@ -198,13 +198,13 @@
 
         <div class="nav">
             <a href="portfolio.html" data-lang="en">Portfolio</a>
-            <a href="contact.html" data-lang="en">Contact</a>
             <a href="about.html" data-lang="en">About</a>
+            <a href="contact.html" data-lang="en">Contact</a>
             <span data-lang="en">Since 2022</span>
             
             <a href="portfolio.html" data-lang="mn">Портфолио</a>
-            <a href="contact.html" data-lang="mn">Холбоо барих</a>
             <a href="about.html" data-lang="mn">Бидний тухай</a>
+            <a href="contact.html" data-lang="mn">Холбоо барихй</a>
             <span data-lang="mn">2022 оноос</span>
         </div>
     </div>
