--- a/portfolio.html
+++ b/portfolio.html
@@ -42,10 +42,7 @@
         <!-- Footer Section -->
         <footer>
             <div class="footer-left">
-                <p>Contact No</p>
-                <p>+976 95258434</p>
-                <p>+976 99784282</p>
-                <p>Contact Email - support@machxvisuals.com</p>
+                <p>Follow us through these socials</p>
                 <div class="social-links">
                     <a href="https://twitter.com" target="_blank">Twitter</a>
                     <a href="https://instagram.com" target="_blank">- Instagram</a>
