--- a/stills.html
+++ b/stills.html
@@ -22,19 +22,22 @@
         </header>
         
         <div class="advertisement-header">
-            <h1>ADVERTISEMENT CAMPAIGNS</h1>
+            <h1>STILL CAMPAIGNS</h1>
             <div class="underline"></div>
         </div>
+
+                <!-- Back Button using an Image -->
+        <a href="portfolio.html" class="back-btn">
+            <img src="./Assets/back.png" alt="Back to Portfolio">
+        </a>
+
         <!-- Body Section -->
         <main id="gallery"></main>
 
         <!-- Footer Section -->
         <footer>
             <div class="footer-left">
-                <p>Contact No</p>
-                <p>+976 95258434</p>
-                <p>+976 99784282</p>
-                <p>Contact Email - support@machxvisuals.com</p>
+                <p>Follow us through these socials</p>
                 <div class="social-links">
                     <a href="https://twitter.com" target="_blank">Twitter</a>
                     <a href="https://instagram.com" target="_blank">- Instagram</a>
