--- a/Contact.html
+++ b/Contact.html
@@ -5,21 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesextra.css">
 </head>
-<body>  
-    <header>
-        <!-- Logo Text -->
-        <div class="logo" onclick="window.location.href='index.html'">
-            MACHXVISUALS
-        </div>
-        
-        <!-- Navigation Links -->
-        <nav>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
+<body>
+    <div class="page-container">
+        <!-- Header Section -->
+        <header>
+            <div class="logo" onclick="window.location.href='index.html'">
+                MACHXVISUALS
+            </div>
+            <nav>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </header>
 
+        <!-- Contact Body -->
+        <div class="contact-body">
+            <div class="contact-box">
+                <div class="contact-text">CONTACT</div>
+                <div class="us-text">US</div>
+                <div class="contact-info">
+                    <div class="contact-email">at <span style="text-decoration: underline;">support.machxvisuals.com</span></div>
+                    <div class="contact-details">If you wish to contact us please be sure to include your full name and <br> your phone number. Thank you!</div>
+                </div>
+            </div>            
+        </div>
+
+        <!-- Footer Section -->
+        <footer>
+            <div class="footer-left">
+                <p>Follow us through these socials</p>
+                <div class="social-links">
+                    <a href="https://twitter.com" target="_blank">Twitter</a>
+                    <a href="https://instagram.com" target="_blank">- Instagram</a>
+                    <a href="https://facebook.com" target="_blank">- Facebook</a>
+                </div>
+            </div>
+            <div class="footer-right">
+                <p class="footer-date">©2022</p>
+                <p class="thin-text">All rights reserved brought to you by MachXVisuals</p>
+            </div>
+        </footer>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
