--- a/Contact.html
+++ b/Contact.html
@@ -24,11 +24,13 @@
         <!-- Contact Body -->
         <div class="contact-body">
             <div class="contact-box">
-                <div class="contact-text">CONTACT</div>
-                <div class="us-text">US</div>
+                <div class="contact-box1">
+                    <div class="contact-text">CONTACT</div>
+                    <div class="us-text">US</div>
+                </div>
                 <div class="contact-info">
                     <div class="contact-email">at <span style="text-decoration: underline;">support.machxvisuals.com</span></div>
-                    <div class="contact-details">If you wish to contact us please be sure to include your full name and <br> your phone number. Thank you!</div>
+                    <div class="contact-details">If you wish to contact us please be sure to include your full name and your phone number. Thank you!</div>
                 </div>
             </div>            
         </div>
@@ -49,6 +51,5 @@
             </div>
         </footer>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
