--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
-
+        <!-- Contact Body -->
         <!-- Contact Body -->
         <div class="contact-body">
             <div class="contact-box">
