--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             
             <a href="portfolio.html" data-lang="mn">Портфолио</a>
             <a href="about.html" data-lang="mn">Бидний тухай</a>
-            <a href="contact.html" data-lang="mn">Холбоо барихй</a>
+            <a href="contact.html" data-lang="mn">Холбоо барих</a>
             <span data-lang="mn">2022 оноос</span>
         </div>
     </div>
