--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MachXVisuals</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="icon" href="./Assets/Group 2.png" type="image/x-icon">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&family=Libre+Caslon+Display&display=swap');
 
