--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title>About Us</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="stylesabout.css"> <!-- Separate CSS for About page -->
+    <link rel="icon" href="./Assets/Group 2.png" type="image/x-icon">
 </head>
 <body>
     <div class="page-container">
