--- a/featured.html
+++ b/featured.html
@@ -6,6 +6,8 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="stylesextra.css">
+    <link rel="icon" href="./Assets/Group 2.png" type="image/x-icon">
+
 </head>
 <body>
     <div class="page-container">
