--- a/g.html
+++ b/g.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text on Top of Each Other</title>
-    <link rel="stylesheet" href="g.css">
-</head>
+    <link rel="stylesheet" href="g.css"></head>
 <body>
     <div class="text-container">
         <span class="text1">contact</span>
