--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="./Assets/Group 2.png" type="image/x-icon">
+
 </head>
 <body>
     <div class="page-container">
